se agrego el metodo sign up en el controlador de AuthController y se modifico la consulta que retorna los post a los que le dio like un usuario en especifico
