# routes/api.php
@@ -34,6 +34,7 @@ Route::group([
     Route::post('logout', [AuthController::class, 'logout']);
     Route::post('refresh', [AuthController::class, 'refresh']);
     Route::get('me', [AuthController::class, 'me']);
+    Route::post('register', [AuthController::class, 'register']);
 });
 
 Route::get('/posts', [PostController::class, 'index']);
